--- a/TrouvTonResto/app/build.gradle
+++ b/TrouvTonResto/app/build.gradle
@@ -3,11 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "com.h4404.trouvtonresto"
-        minSdkVersion 15
-        targetSdkVersion 23
+        minSdkVersion 17
         versionCode 1
         versionName "1.0"
     }
@@ -17,6 +15,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -25,5 +25,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
-
+    compile 'com.android.support:support-v4:23.1.1'
 }
