--- a/TrouvTonResto/app/src/main/AndroidManifest.xml
+++ b/TrouvTonResto/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
@@ -50,6 +50,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".TutoPageActivity"
+            android:label="@string/app_name"
+            android:uiOptions="splitActionBarWhenNarrow"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+            android:noHistory="true">
         </activity>
 
     </application>
