Structure initial du rapport

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ TrouvTonResto/.idea/encoding.xml
 
 TrouvTonResto/.idea/runConfigurations.xml
 TrouvTonResto/app/app/src/main/res/values/google_maps_api.xml
+
+*.toc
+
+*.pdf
+
+*.out
+
+*.log
+
+*.aux
